# oh-my-hermes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  INSTALL_FOR_AGENTS.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  friren-pr-review.yml  pages.yml
docs/: ADDING-A-SKILL.md  APPLICATION_CASES.md  ARCHITECTURE.md  CAPABILITIES.md  CAPABILITY_IMPACT.md  CHAT_WRAPPER_EXAMPLES.md  CODEGRAPH.md  CONTRACT_SUNSET_CANDIDATES.md  DELEGATION_FIRST_COMPLETENESS.md  DIRECTION.md  FANOUT.md  HARNESS_QUALITY.md  HERMES_AGENT_INTEGRATION_RUNBOOK.md  INSTALLATION.md  MEMORY.md  MEMORY_CONTEXT.md  MULTI_AGENT_OPERATIONS.md  ORCHESTRATION_PATTERNS.md  PARITY.md  PLAYBOOKS.md  README.md  RELEASE.md  ROADMAP.md  ROLES.md  SKILL_QUALITY_COMPARISON.md  WORKFLOWS.md
examples/: discord-bot-runtime-flow.md  hermes-config.yaml  telegram-adapter-shim.py  wrapper_shim_common.py
examples/hermes-ops/: scheduled-competitor-digest.json
examples/ops-service-quality/: grafana-like.json  prometheus-like.json
examples/research-department/: README.md  competitor-digest.json
examples/use-cases/: g1-g10-demo-cards.json
examples/wrapper-events/: discord-command-preview.json  discord-route-hint-visual.json  discord-workflow-catalog.json  slack-command-preview.json  slack-route-hint-missed-route.json  telegram-command-preview.json  telegram-risky-refactor.json  telegram-route-hint.json  telegram-safe-feature.json
examples/wrapper-golden/: delivery-obligation.json  goal-quality-coaching.json  harness-quality.json  hermes-agent-integration.json  plugin-interact.json  route-hints.json  status-ladder.json  telegram-status-ladder.json
omh/: __init__.py  cli.py  config_adapter.py  converter.py  hashutil.py  installer.py  local_store.pyi  manifest.py  paths.py  skill_pack.py  snippet.py
omh/core/: errors.py
roles/: builder.md  coding-handoff.md  guide.md  handoff-guide.md  operator.md  planner.md  planning-lead.md  research-lead.md  researcher.md  review-gate.md  reviewer.md  tracker.md
site/: design-system.html  index.html  styles.css
site/docs/: index.html
skills/accessibility-audit/: SKILL.md
skills/achievements/: SKILL.md
skills/agent-board/: SKILL.md
skills/agent-debug/: SKILL.md
skills/agent-evaluation/: SKILL.md
skills/agent-ops-review/: SKILL.md
skills/ai-slop-cleaner/: SKILL.md
skills/ask/: SKILL.md
skills/automation-blueprint/: SKILL.md
skills/autoresearch-goal/: SKILL.md
skills/best-practice-research/: SKILL.md
skills/browser-operator/: SKILL.md
skills/build-failure-triage/: SKILL.md
skills/cancel/: SKILL.md
skills/code-review/: SKILL.md
skills/codebase-onboarding/: SKILL.md
skills/codegraph-refresh/: SKILL.md
skills/command-operator/: SKILL.md
skills/connector-operator/: SKILL.md
skills/content-operator/: SKILL.md
skills/context-budget-review/: SKILL.md
skills/cto-loop/: SKILL.md
skills/data-analysis/: SKILL.md
skills/deep-interview/: SKILL.md
skills/deliverable-package/: SKILL.md
skills/deploy-and-monitor/: SKILL.md
skills/design-orchestration/: SKILL.md
skills/design-quality-gate/: SKILL.md
skills/doctor/: SKILL.md
skills/executor-runtime-readiness/: SKILL.md
skills/external-connector-readiness/: SKILL.md
skills/failure-signal-audit/: SKILL.md
skills/feedback-triage/: SKILL.md
skills/frontend/: SKILL.md
skills/gateway-intent-card/: SKILL.md
skills/github-event-ops/: SKILL.md
skills/harness-session-inventory/: SKILL.md
skills/idea-to-deploy/: SKILL.md
skills/img-summary/: SKILL.md
skills/instinct-ledger/: SKILL.md
skills/live-info-operator/: SKILL.md
skills/loop/: SKILL.md
skills/materials-package/: SKILL.md
skills/media-input-operator/: SKILL.md
skills/meeting-brief/: SKILL.md
skills/memory-curation-review/: SKILL.md
skills/memory-sync/: SKILL.md
skills/meta-router/: SKILL.md
skills/model-setup/: SKILL.md
skills/morning-brief/: SKILL.md
skills/oh-my-hermes/: SKILL.md
skills/operating-rhythm/: SKILL.md
skills/ops-observability-card/: SKILL.md
skills/ops-review/: SKILL.md
src/: __init__.py  capability_roadmap.py  chat_router.py  cli.py  codex_progress.py  coding_delegation.py  coding_lifecycle.py  command_path.py  config_adapter.py  context.py  context_safety.py  doctor.py  executor_progress.py  executor_readiness.py  executors.py  goal_ledger.py  goal_loop.py  grounded_score.py  hashutil.py  hermes_ops.py  hermes_planning.py  ingress.py  installer.py  isolation.py  materials.py  mcp_bridge.py  memory.py  menubar_app.py  menubar_status.py  observation_journal.py  operations.py  operator_productivity.py  paper_learning.py  parity.py  paths.py  playbooks.py  plugin_pack.py  probe.py  quickstart.py  recommend.py  (+15 more)
src/omh/: demo.py  (+75 more)
tests/: _local_package.py  _ops_quality_helpers.py  test_adapter_quality.py  test_agentic_playbook.py  test_application_cases.py  test_architecture_layout.py  test_awesome_hermes_agent_catalog.py  test_awesome_hermes_agent_catalog_coherence.py  test_awesome_hermes_agent_rules_posture.py  test_capabilities.py  test_capability_impact.py  test_catalog_questions.py  test_chat_progress_reporting.py  test_chat_router.py  test_cli.py  test_codegraph.py  test_codex_progress.py  test_coding_lifecycle.py  test_common_request_coverage.py  test_config_adapter.py  test_conformance.py  test_context_brief_coverage.py  test_context_safety.py  test_demo.py  test_design_orchestration.py  test_doctor_advisory.py  test_dynamic_workflow.py  test_efficiency.py  test_evidence_copy.py  test_executor_capability_snapshots.py  test_executor_progress_binding.py  test_executor_progress_projection.py  test_fanout_contract.py  test_fanout_dispatch.py  test_goal_coaching_chat.py  test_goal_ledger.py  test_hermes_achievements.py  test_hermes_coding_harness.py  test_hermes_readiness.py  test_hermes_retained_context.py  (+60 more)
(+410 files in other folders)
