[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-hermes"
version = "1.0.2"
description = "Install a Hermes-native skill workflow pack."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "oh-my-hermes maintainers" }]
dependencies = []
keywords = ["hermes", "agent", "skills", "workflow", "automation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
]

[project.scripts]
omh = "omh.cli:main"

[project.urls]
Homepage = "https://rlaope.github.io/oh-my-hermes/"
Issues = "https://github.com/rlaope/oh-my-hermes/issues"
Repository = "https://github.com/rlaope/oh-my-hermes"

[tool.setuptools]
packages = [
  "omh",
  "omh.capabilities",
  "omh.catalogs",
  "omh.cli",
  "omh.codegraph",
  "omh.coding",
  "omh.commands",
  "omh.conformance",
  "omh.core",
  "omh.install",
  "omh.maintenance",
  "omh.mcp",
  "omh.plugin_bundle",
  "omh.plugin_bundle.omh",
  "omh.plugin_bundle.omh.hooks",
  "omh.plugin_bundle.omh.references",
  "omh.plugin_bundle.omh.tools",
  "omh.profiles",
  "omh.quality",
  "omh.routing",
  "omh.runtime",
  "omh.skills",
  "omh.surfaces",
  "omh.system",
  "omh.workflows",
  "omh.wrapper",
]

[tool.setuptools.package-dir]
"omh" = "src/omh"
"omh.capabilities" = "src/capabilities"
"omh.catalogs" = "src/catalogs"
"omh.codegraph" = "src/codegraph"
"omh.coding" = "src/coding"
"omh.commands" = "src/commands"
"omh.conformance" = "src/conformance"
"omh.core" = "src/core"
"omh.install" = "src/install"
"omh.maintenance" = "src/maintenance"
"omh.mcp" = "src/mcp"
"omh.plugin_bundle" = "src/plugin_bundle"
"omh.profiles" = "src/profiles"
"omh.quality" = "src/quality"
"omh.routing" = "src/routing"
"omh.runtime" = "src/runtime"
"omh.skills" = "src/skills"
"omh.surfaces" = "src/surfaces"
"omh.system" = "src/system"
"omh.workflows" = "src/workflows"
"omh.wrapper" = "src/wrapper"

[tool.setuptools.package-data]
"omh.catalogs" = ["*.json"]
"omh.plugin_bundle.omh" = ["plugin.yaml", "config.yaml"]
"omh.plugin_bundle.omh.references" = ["*.md"]
